...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/picker_year"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="10dp">
        </NumberPicker>

        <NumberPicker
            android:id="@+id/picker_month"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            >
        </NumberPicker>
        <NumberPicker
            android:id="@+id/picker_date"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            >
        </NumberPicker>
    </LinearLayout>
...
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/ok__pick_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="OK"
            android:textAllCaps="false"
            />

    </LinearLayout>
</LinearLayout>
